--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,10 +6,14 @@
     "author": "CitRUS",
     "license": "MIT",
     "devDependencies": {
-        "@types/fs-extra": "8.1.0"
+        "@types/fs-extra": "8.1.0",
+        "@types/lodash": "4.14.149"
     },
     "dependencies": {
+        "@tc2tc/telegram-sender": "*",
+        "@tc2tc/twitch-chat-receiver": "*",
         "fs-extra": "8.1.0",
+        "lodash": "4.17.15",
         "validate": "5.1.0"
     }
 }
