--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,6 +5,12 @@
     "types": "dist/index.d.ts",
     "author": "CitRUS",
     "license": "MIT",
+    "scripts": {
+        "test": "jest --colors"
+    },
+    "jest": {
+        "preset": "ts-jest"
+    },
     "devDependencies": {
         "@types/fs-extra": "8.1.0",
         "@types/lodash": "4.14.149"
@@ -14,6 +20,7 @@
         "@tc2tc/twitch-chat-receiver": "*",
         "fs-extra": "8.1.0",
         "lodash": "4.17.15",
+        "moment": "^2.24.0",
         "validate": "5.1.0"
     }
 }
