--- a/packages/twitch-chat-receiver/package.json
+++ b/packages/twitch-chat-receiver/package.json
@@ -12,7 +12,6 @@
         "preset": "ts-jest"
     },
     "dependencies": {
-        "twitch": "4.0.7",
-        "twitch-chat-client": "4.0.7"
+        "dank-twitch-irc": "4.3.0"
     }
 }
